# eng

./: pyproject.toml
src/cli/: data_converter.py
src/eng/: __init__.py
src/eng/cli/: data_converter.py
src/eng/data/: models.py  utils.py
src/eng/data/steel/: CHS.py  PFC.py  SHS.py  UB.py  UC.py  WB.py  WC.py  __init__.py
src/eng/data/steel/data/: CHS.json  PFC.csv  PFC.json  SHS.json  UB.json  UC.json  WB.csv  WB.json  WC.csv  WC.json  json-converter.py  model.py
src/eng/data/steel/data/raw/: CHS.csv  SHS.csv  UB.csv  UC.csv
src/eng/data/steel/model/: steel.py
