[project]
name = "eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steve Yarnold", email = "syarnold662@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
eng-convert = "cli.data_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
